--- a/src/package.json
+++ b/src/package.json
@@ -20,7 +20,7 @@
     "dependencies": {
         "aws-sdk": "^2.1545.0",
         "esbuild": "^0.14.14",
-        "uuidv4": "^6.2.13"
+        "uuid": "^9.0.1"
     },
     "devDependencies": {
         "@types/aws-lambda": "^8.10.92",
